--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/preact": "^2.2.0",
+    "@astrojs/rss": "^2.4.3",
     "astro": "^2.4.1",
     "preact": "^10.15.1"
   }
